# classic_gym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
classic_gym/: hooks.py  modules.txt
classic_gym/classic_gym/doctype/calorie_intake/: calorie_intake.js  calorie_intake.json  calorie_intake.py  test_calorie_intake.py
classic_gym/classic_gym/doctype/cardio_machine_booking/: cardio_machine_booking.js  cardio_machine_booking.json  cardio_machine_booking.py
classic_gym/classic_gym/doctype/group_class_booking/: group_class_booking.js  group_class_booking.json  group_class_booking.py  test_group_class_booking.py
classic_gym/classic_gym/doctype/group_classes/: group_classes.js  group_classes.json  group_classes.py
classic_gym/classic_gym/doctype/gym_cardio_machines/: gym_cardio_machines.js  gym_cardio_machines.json  gym_cardio_machines.py
classic_gym/classic_gym/doctype/gym_locker_booking/: gym_locker_booking.js  gym_locker_booking.json  gym_locker_booking.py
classic_gym/classic_gym/doctype/gym_locker_details/: gym_locker_details.js  gym_locker_details.json  gym_locker_details.py
classic_gym/classic_gym/doctype/gym_locker_number/: gym_locker_number.js  gym_locker_number.json  gym_locker_number.py
classic_gym/classic_gym/doctype/gym_lockers/: gym_lockers.js  gym_lockers.json  gym_lockers.py
classic_gym/classic_gym/doctype/gym_medical_history/: gym_medical_history.json  gym_medical_history.py
classic_gym/classic_gym/doctype/gym_member/: gym_member.js  (+2 more)
classic_gym/config/: desktop.py  docs.py
classic_gym/services/: rest.py
(+42 files in other folders)
